2005-07-24  William Jon McCann  <mccann@jhu.edu>

	* gui/faces/Makefile.am:
	* gui/face/dice.jpg:
	* gui/face/sky.jpg: Updated images.

	* gui/face/astronaut.jpg:
        * gui/face/baseball.png:
        * gui/face/butterfly.png:
        * gui/face/cat-eye.jpg:
        * gui/face/chess.jpg:
        * gui/face/coffee.jpg:
        * gui/face/energy-arc.jpg:
        * gui/face/fish.jpg:
        * gui/face/flake.jpg:
        * gui/face/flower.jpg:
        * gui/face/grapes.jpg:
        * gui/face/guitar.jpg:
        * gui/face/launch.jpg:
        * gui/face/leaf.jpg:
        * gui/face/lightning.jpg:
        * gui/face/penguin.jpg:
        * gui/face/puppy.jpg:
        * gui/face/soccerball.png:
        * gui/face/sunflower.jpg:
        * gui/face/sunset.jpg:
        * gui/face/tennis-ball.png:
        * gui/face/yellow-rose.jpg: New images.  All
	derived from images on wikipedia and wikimedia
	with free licenses.

	* gui/face/bonfire.jpg:
	* gui/face/cdrom.jpg:
        * gui/face/clock.jpg:
        * gui/face/hollyleaf.jpg:
        * gui/face/lamas.jpg:
        * gui/face/seal.jpg:
        * gui/face/skyline.jpg:
        * gui/face/daisy.jpg: Removed.
	
2005-07-22  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Bumped version to 2.8.0.2 since
	  a new interface was added, the gdmflexiserver
	  command, GET_CONFIG_FILE was added.
	* daemon/Makefile.am, daemon/gdm.[ch], 
	  daemon/server.c, daemon/xdmcp.c, docs/C/gdm.xml,
	  gui/Makefile.am, gui/gdmXnestchooser.c, 
	  gui/gdmchooser.c, gdm/gdmcomm.[ch], 
	  gui/gdmcommon.[ch], gdm/gdmdynamic.c, 
	  gui/gdmflexiserver.c, gui/gdmlogin.c, 
	  gui/gdmphotosetup.c, gui/gdmsetup.c, 
	  gui/greeter/greeter.c:  If /etc/gdm/gdm.conf
	  does not exist, then GDM will look in 
	  /usr/share/gdm/gdm.conf.  Since /usr/share can be
          shared across multiple systems, this makes it easier
          for sysadmins to configure sitewide settings for GDM2
	  instead of having to customize /etc/gdm/gdm.conf on